--- a/BMC/BMC.Client/src/app/components/lego-universe/lego-universe.component.scss
+++ b/BMC/BMC.Client/src/app/components/lego-universe/lego-universe.component.scss
@@ -7,12 +7,14 @@
 :host {
     display: block;
     width: 100%;
+    overflow-x: hidden;
 }
 
 .lego-universe {
     max-width: 1400px;
     margin: 0 auto;
     padding: 24px;
+    overflow: hidden;
 }
 
 
@@ -572,6 +574,10 @@
 @media (max-width: 1024px) {
     .viz-grid {
         grid-template-columns: 1fr;
+    }
+
+    .quick-nav {
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
